--- a/assets/css/jquery.bxslider.css
+++ b/assets/css/jquery.bxslider.css
@@ -56,7 +56,7 @@
 
 .bx-wrapper .bx-loading {
 	min-height: 50px;
-	background: url(images/bx_loader.gif) center center no-repeat #fff;
+	background: url(../images/bx_loader.gif) center center no-repeat #fff;
 	height: 100%;
 	width: 100%;
 	position: absolute;
@@ -105,12 +105,12 @@
 
 .bx-wrapper .bx-prev {
 	left: 10px;
-	background: url(../../images/controls.png) no-repeat 0 -32px;
+	background: url(../images/controls.png) no-repeat 0 -32px;
 }
 
 .bx-wrapper .bx-next {
 	right: 10px;
-	background: url(../../images/controls.png) no-repeat -43px -32px;
+	background: url(../images/controls.png) no-repeat -43px -32px;
 }
 
 .bx-wrapper .bx-prev:hover {
